@@ -33,6 +33,12 @@
             <artifactId>kryo</artifactId>
         </dependency>
 
+        <!-- CGLib  -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -63,4 +69,18 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <!--  用于解决CGLib无法调用JDK内部API通过字节码生成代理类  -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
